# OOP2024

./: README.md
CrosswordSolver/: CMakeLists.txt  CrosswordSolver.cpp  CrosswordSolver.h  README.md  main.cpp  words.txt
CrosswordSolver/tests/: CMakeLists.txt  test_CrosswordSolver.cpp
